@@ -2,3 +2,5 @@
 (1+sqrt(-1))/(1-sqrt(-1)) = sqrt(-1)
 a/4 = 1/4*a
 factor(factorial(6)) = 2^4*3^2*5
+conjugate(sqrt(-1)+1/2) = 1/2-sqrt(-1)
+(1 <= 2) => (3 > 4)
